syntax = "proto3";

package direcentos;

service DirecentosService {
    rpc getDirectorios (Empty) returns (directoriosResponse) {}
    rpc getDates (datesInput) returns (datesResponse) {}
    rpc getActividades (actividadesInput) returns (actividadesResponse) {}
    rpc getPcs (pcsInput) returns (pcsResponse) {}
    rpc writeToFile (writeToFileInput) returns (createdResponse) {}
    rpc writeToFileProg (writeToFileProgInput) returns (createdResponse) {}
    rpc deletedFile (labInput) returns (deletedResponse) {}
    rpc existFile (labInput) returns (existFileResponse) {}
}

// getDirectorios

message Empty {}

message directoriosResponse {
    int32 status = 1;
    repeated string error = 2;
    repeated string folders = 3;
}

message Date {
    string nombre = 1;
}

message datesInput {
    string lab = 1;
}

message datesResponse {
    int32 status = 1;
    repeated string error = 2;
    repeated Date folders = 3;
}


message Actividad {
    string nombre = 1;
}

message actividadesInput {
    string lab = 1;
    string fecha = 2;
}

message actividadesResponse {
    int32 status = 1;
    repeated string error = 2;
    repeated Actividad folders = 3;
}

message Pc {
    string nombre = 1;
}

message pcsInput {
    string lab = 1;
    string fecha = 2;
    string actividad = 3;
}

message pcsResponse {
    int32 status = 1;
    repeated string error = 2;
    repeated Pc folders = 3;
}

message labInput {
    string lab = 1;
}

message writeToFileInput {
    string lab = 1;
    string actividad = 2;
}

message writeToFileProgInput {
    string lab = 1;
    string content = 2;
}

message createdResponse {
    int32 status = 1;
    repeated string error = 2;
    bool created = 3;
}

message deletedResponse {
    int32 status = 1;
    repeated string error = 2;
    bool deleted = 3;
}

message existFileResponse {
    int32 status = 1;
    repeated string error = 2;
    bool exist = 3;
}


